add meta tag for handling viewport

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="Assets/MaterialDesign-Webfont-master/css/materialdesignicons.min.css">
 <link rel="stylesheet" href="Assets/aos/dist/aos.css" />
 <link rel=stylesheet href="Assets/style.css"/>
+<meta name=viewport content=width=device-width
 <link rel="stylesheet" href="Assets/responsive.css">
 </head>
 
