add meta tag for keywords

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <link rel="stylesheet" href="Assets/MaterialDesign-Webfont-master/css/materialdesignicons.min.css">
 <link rel="stylesheet" href="Assets/aos/dist/aos.css" />
 <link rel=stylesheet href="Assets/style.css"/>
-<meta name=viewport content=width=device-width
+<meta name=viewport content=width=device-width />
+<meta name=keywords content="aleeycreative, portfolio, web developer, programmer, coding, frontend development" />
 <link rel="stylesheet" href="Assets/responsive.css">
 </head>
 
