edited the  message with the typing effect

--- a/index.html
+++ b/index.html
@@ -130,7 +130,15 @@
 <script src="Assets/aos/dist/aos.js"> </script>
 <script src="Assets/MyTyper/index.js"> </script>
 <script> 
-	const myTyper = createTyper('Welcome | to | AleeyCreative', '.text-1', 0, false)
+
+	const text = `
+	Welcome to AleeyCreative |
+	I develop websites |
+	and web-based applications | 
+	that can meet your business needs. |
+	
+	`
+	const myTyper = createTyper(text, '.text-1', 0, false)
 	let words = 'I am a young developer who build stuffs for the <span class=highlight> web </span> | You can learn more about me <span class="highlight mdi mdi-arrow-down-circle"> </span> '  
 </script>
 <script>
