edited the welcome message

--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
 
 <!--big area with background image-->
 <div class="welcome">
-    <div class="text-1 " data-aos="flip-up" > <!-- Welcome to AleeyCreative --> </div>
-    <div class="text-2"> I am a young developer who build stuffs for the <span class=highlight> web </span>  </div>
- 	<div class=text-3>You can learn more about me <span class="highlight mdi mdi-arrow-down-circle"> </span>  </div> 
+    <div class="text-1 " data-aos="flip-up" > <!-- Welcome to AleeyCreative --> </div> 
 </div>
 
 <!--container for each content-->
@@ -133,9 +131,10 @@
 
 	const text = `
 	Welcome to AleeyCreative |
-	I develop websites |
-	and web-based applications | 
-	that can meet your business needs. |
+	I am a young developer... | 
+	who builds websites  | 
+	who builds webapps |	
+	You can learn more about me <span class="highlight mdi mdi-arrow-down-circle"> </span> |
 	
 	`
 	const myTyper = createTyper(text, '.text-1', 0, false)
