added something to the welcome message

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 	Welcome to AleeyCreative |
 	I am a young developer... | 
 	who builds websites  | 
-	who builds webapps |	
+	who builds webapps. |	
 	You can learn more about me <span class="highlight mdi mdi-arrow-down-circle"> </span> |
 	
 	`
