changed logo and added greeting to website

--- a/index.html
+++ b/index.html
@@ -126,24 +126,14 @@
   
 <!--library for page scrolling effects-->
 <script src="Assets/aos/dist/aos.js"> </script>
-<script src="Assets/MyTyper/index.js"> </script>
-<script> 
 
-	const text = `
-	Welcome to AleeyCreative |
-	I am a young developer... | 
-	who builds websites  | 
-	who builds webapps. |	
-	You can learn more about me <span class="highlight mdi mdi-arrow-down-circle"> </span> |
-	
-	`
-	const myTyper = createTyper(text, '.text-1', 0, false)
-	let words = 'I am a young developer who build stuffs for the <span class=highlight> web </span> | You can learn more about me <span class="highlight mdi mdi-arrow-down-circle"> </span> '  
-</script>
+<!--- Library for the typing effect -->
+<script src="Assets/MyTyper/index.js"> </script>
+
+<script src='Assets/aleeycreative.js'> </script>
+
 <script>
-AOS.init({
-    easing:"ease-in-out-sine"
-})    
+
 </script>
 </body>
 </html>
