--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 <link rel="stylesheet" href="Assets/others.css"/>
 <link rel="stylesheet" href="Assets/aos/dist/aos.css" />
 <link rel=stylesheet href="Assets/style.css"/>
-<meta name=viewport content=width=device-width />
+<meta name=viewport content="width=device-width" />
 <meta name=keywords content="aleeycreative, portfolio, web developer, programmer, coding, frontend development" />
 <script src='Assets/MyTyper/typed.js/lib/typed.min.js'> </script>
 <link rel="stylesheet" href="Assets/responsive.css">
+<link rel='icon' href='Assets/logo.ico'/>
 </head>
 
 <body>
