--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
 
 <!--big area with background image-->
 <div class="welcome">
+    <div class="links"> 
+        <div class="links__wrapper">
+            <a href="#about"></a>
+            <a href="#skills"></a>
+            <a href="#connect"></a>
+        </div>
+    </div>
     <div class="text-1 " data-aos="zoom-in" > <!-- Welcome to AleeyCreative --> </div> 
 </div>
 
