Redesign the welcome message component

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 
 <!--big area with background image-->
 <div class="welcome">
-    <div class="links"> 
+    <div class="links-small"> 
         <div class="links__wrapper">
-            <a href="#about"></a>
-            <a href="#skills"></a>
-            <a href="#connect"></a>
+            <a href="#about">About</a>
+            <a href="#skills">Skills</a>
+            <a href="#connect">Connect</a>
         </div>
     </div>
     <div class="text-1 " data-aos="zoom-in" > <!-- Welcome to AleeyCreative --> </div> 
