--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
 <link rel="stylesheet" href="Assets/aos/dist/aos.css" />
 <link rel=stylesheet href="Assets/style.css"/>
 <meta name=viewport content="width=device-width" />
+<title> Aleeycreative </title>
 <meta name=keywords content="aleeycreative, portfolio, web developer, programmer, coding, frontend development" />
 <script src='Assets/MyTyper/typed.js/lib/typed.min.js'> </script>
 <link rel="stylesheet" href="Assets/responsive.css">
-<link rel='icon' href='Assets/logo.ico'/>
+<link rel='icon' href='Assets/logo_icon.png'/>
+
 </head>
 
 <body>
 <div class="header">
 <!--    left pane of header-->
     <div class="left-pane">
-        <img src="Assets/logo2.svg" alt="AleeyCreative" />
+        <img src="Assets/logo.svg" alt="AleeyCreative" />
         <div class="title"> AleeyCreative</div>
     </div>
 <!--links area    -->
