--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="Assets/aos/dist/aos.css" />
 <link rel=stylesheet href="Assets/style.css"/>
 <meta name=viewport content="width=device-width" />
+<meta name="google-site-verification" content="a_VfY2eLlFswpedBvo79KGT5PdIQkMsMRGh6CNPL0Gk" />
 <title> Aleeycreative </title>
 <meta name=keywords content="aleeycreative, portfolio, web developer, programmer, coding, frontend development" />
 <script src='Assets/MyTyper/typed.js/lib/typed.min.js'> </script>
