feat: Integrating google analytics tag

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
       name="google-site-verification"
       content="a_VfY2eLlFswpedBvo79KGT5PdIQkMsMRGh6CNPL0Gk"
     />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NGJ0NWB26J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NGJ0NWB26J');
+</script>
     <title>Aleeycreative</title>
     <meta
       name="keywords"
