style: Changed styling for social links section

--- a/index.html
+++ b/index.html
@@ -160,26 +160,26 @@
         <div class="text">
           So, now you know a little about me. If you wanna build something, just
           let me know using any of the following platforms:
-          <ul className="social-links">
+          <ul class="social-links">
             <li>
-              <span class="highlight mdi mdi-twitter">Twitter </span>
+              <span class="mdi mdi-twitter">Twitter -</span>
               <a href="https://www.twitter.com/AleeyCreative">
-                <span id="first"> - @AleeyCreative </span>
+                <span id="first"> @AleeyCreative </span>
               </a>
             </li>
             <li>
-              <span class="highlight mdi mdi-gmail">Gmail</span>
+              <span class="mdi mdi-gmail">Gmail -</span>
 
               <a href="mailto: babaali196@gmail.com">
-                <span id="second"> - babaali196@gmail.com </span>
+                <span id="second"> babaali196@gmail.com </span>
               </a>
             </li>
 
             <li>
-              <span class="highlight mdi mdi-phone">Phone</span>
+              <span class="mdi mdi-phone">Phone -</span>
 
               <a href="tel:+2348024711182">
-                <span id="third"> - +234 802 471 1182 </span>
+                <span id="third"> +234 802 471 1182 </span>
               </a>
             </li>
           </ul>
