fix: Changed icons links to cdn

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
   <head>
     <link rel="stylesheet" href="Assets/Fonts/fonts.css" />
-    <link rel=stylesheet
-    href=Assets/MaterialDesign-Webfont-master/css/materialdesignicons.min.css />
+    
     <link rel="stylesheet" href="Assets/others.css" />
     <link rel="stylesheet" href="Assets/aos/dist/aos.css" />
     <link rel="stylesheet" href="Assets/style.css" />
     <meta name="viewport" content="width=device-width" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterlDesign-Webfont/5.9.55/css/materialdesignicons.min.css" crossorigin="anonymous" referrerpolicy="norefferer">
+    <meta property="og:type" content="website" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Aleeycreative" />
     <meta property="og:image" content="" />
