fix: Changed deps link to the hosted variants

--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <html>
   <head>
     <link rel="stylesheet" href="Assets/Fonts/fonts.css" />
-    <link rel=stylesheet
-    href=Assets/MaterialDesign-Webfont-master/css/materialdesignicons.min.css />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.9.55/css/materialdesignicons.min.css"
+      integrity="sha512-vIgFb4o1CL8iMGoIF7cYiEVFrel13k/BkTGvs0hGfVnlbV6XjAA0M0oEHdWqGdAVRTDID3vIZPOHmKdrMAUChA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos/css" rel="stylesheet" />
+
     <link rel="stylesheet" href="Assets/others.css" />
     <link rel="stylesheet" href="Assets/aos/dist/aos.css" />
     <link rel="stylesheet" href="Assets/style.css" />
@@ -30,6 +37,7 @@
 
       gtag("config", "G-NGJ0NWB26J");
     </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <title>Aleeycreative</title>
     <meta
       name="keywords"
