--- a/index.html
+++ b/index.html
@@ -205,6 +205,9 @@
         document.write(new Date().getFullYear());
       </script>
     </div>
+    
+    <div id="wcb" class="carbonbadge"></div>
+<script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script
 
     <!--library for page scrolling effects-->
     <script src="Assets/aos/dist/aos.js"></script>
