--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <!--    left pane of header-->
       <div class="left-pane">
         <img src="Assets/logo.svg" alt="AleeyCreative" />
-        <div class="title">AleeyCreative</div>
+        <div class="title">Baba Ali</div>
       </div>
       <!--links area    -->
       <nav class="links">
