--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       gtag("config", "G-NGJ0NWB26J");
     </script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <title>Aleeycreative</title>
+    <title>Baba Ali</title>
     <meta
       name="keywords"
       content="aleeycreative, portfolio, web developer, programmer, coding, frontend development"
